<resources>
    <string name="app_name">Filmosis</string>
    <string name="prefs_file" translatable="false">com.example.filmosis.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id" translatable="false">383558741656-vm5292377bunatdck9fkujfiu4hi9nuj.apps.googleusercontent.com</string>
    <string name="page_home">Inicio</string>
    <string name="page_explore">Explorar</string>
    <string name="page_user">Perfil</string>
    <string name="page_social">Social</string>

    <!--    Explore fragment -->
    <string name="genresContainerTitle">Géneros</string>
    <!--    Movie Row Menu-->
    <string name="movieRowMenu_addToList">Añadir a lista</string>
    <string name="movieRowMenu_downloadCover">Descargar portada</string>
    <string name="movieRowMenu_shareMovie">Compartir pelicula</string>
    <!--    Drawer Menu-->
    <string name="drawerMenu_myLists">Mis Listas</string>

    <!--    Search Filter Menu-->
    <string name="searchFilterMenu_searchMovies">Buscar películas</string>
    <string name="searchFilterMenu_searchDirectors">Buscar personas</string>

    <!--    Item person Movie Cast-->
    <string name="itemPersonMovieCast_CharacterLabel">Personaje:</string>

    <!--    Person Details Fragment-->
    <string name="personDetails_biographyTitle">Biografía</string>
    <string name="personDetails_personMoviesRvTitle">Películas</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido de vuelta, </string>
    <string name="search_action">Buscar</string>
    <string name="Theme">Tema</string>
    <string name="pel_culas_populares">Películas populares</string>
    <string name="tendencia">En Tendencia esta semana</string>
    <string name="best_rated">Mejor valoradas</string>
    <string name="popular">Populares</string>
    <string name="latest">Últimas</string>
    <string name="upcoming">Próximas</string>
    <string name="ver_mas">Ver todo</string>
    <string name="pel_prox">Próximamente</string>
    <string name="Actualmente">Actualmente</string>
    <string name="servicios">Servicios</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="ver_todo">Ver todo</string>
    <string name="movie_director_placeholder">Director de ejemplo</string>
    <string name="movie_title_placeholder">Título de ejemplo</string>
    <string name="movie_date_placeholder">1970-01-01</string>
    <string name="createList_addListTv">Añadir una lista</string>
    <string name="search_film">Buscar películas</string>
    <string name="crear_lista">CREAR LISTA +</string>
    <string name="t_tulo_de_la_lista">Título de la lista</string>
    <string name="descripci_n_de_la_lista_opcional">Descripción de la lista (opcional)</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="a_adir_pel_cula">AÑADIR PELÍCULA +</string>
    <string name="atras">atrás</string>
    <string name="peliculas_populares">Películas populares</string>
    <string name="peliculas_recomendadas">Películas recomendadas</string>
    <string name="cambiar_contrase_a">CAMBIAR CONTRASEÑA</string>
    <string name="reestablecer_contrase_a">REESTABLECER CONTRASEÑA</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="idioma">Idioma:</string>
    <string name="censura">Censura:</string>
    <string name="genero">Genero:</string>
    <string name="popularidad">Popularidad:</string>
    <string name="puntuacion">Puntuacion:</string>
    <string name="a_adir_a_lista">AÑADIR A LISTA</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="director" translatable="false">Director</string>
    <string name="reparto">Reparto</string>
    <string name="suscripcion_a_streaming">Suscripcion a streaming</string>
    <string name="no_disponible">No disponible</string>
    <string name="alquiler">Alquiler</string>
    <string name="compra">Compra</string>
    <string name="not_censor">Todos los públicos</string>
    <string name="directora">Directora</string>
    <string name="actriz">Actriz</string>
    <string name="no_lista">Todavía no tienes creada ninguna lista.\nCrea una con el botón de abajo.</string>
    <string name="no_listas_agregar">Todavía no tienes ninguna lista creada.\n\nPara crear una lista, ve a \'Mis listas\' en el menú desplegable superior de la esquina izquierda</string>
    <string name="accept">ACEPTAR</string>
    <string name="actor" translatable="false">Actor</string>
    <string name="listas_populares">Listas populares</string>
    <string name="listas_de_la_comunidad">Listas de la comunidad</string>
    <string name="fecha_lanzamiento">"Fecha de lanzamiento: "</string>
    <string name="puntuacion_media">"Puntuación media: "</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="select_help_topic">Selecciona un tema</string>
    <string name="subject_hint">Asunto</string>
    <string name="message_hint">Cuerpo del mensaje</string>
    <string name="send_button_label">Enviar</string>
    <string name="bug_error">Bug/Error</string>
    <string name="assistance">Asistencia</string>
    <string name="suggestion">Sugerencia</string>
    <string name="help">Ayuda y feedback</string>
    <string name="fill">Rellena todos los campos, por favor.</string>
    <string name="listas_de_nuestros_expertos">Listas de nuestros expertos</string>
    <string name="listas_de_expertos">Listas de expertos</string>
    <string name="share_movie_prefix">Mira la película </string>
    <string name="share_movie_suffix">. Compartido a través de Filmosis. Descárgala ya.</string>
    <string name="movieRowMenu_shareMovieCover">Compartir portada</string>
    <string name="el_video_no_est_disponible">El video no está disponible</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="ingrese_su_contrase_a_actual">Ingrese su contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="ingrese_su_nueva_contrase_a">Ingrese su nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="confirme_su_nueva_contrase_a">Confirme su nueva contraseña</string>
    <string name="volver">VOLVER</string>
    <string name="confirmar">CONFIRMAR</string>

</resources>