<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Contraseña actual -->
    <TextView
        android:id="@+id/changePassword_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/cambio_de_contrase_a"
        android:textColor="?attr/colorOnBackground"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a_actual"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/changeFromProf_currentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_contrase_a_actual"
        android:inputType="textPassword" />

    <!-- Nueva contraseña -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nueva_contrase_a"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/changeFromProf_newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_nueva_contrase_a"
        android:inputType="textPassword" />

    <!-- Confirmar contraseña -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirmar_contrase_a"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/changeFromProf_newPassConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirme_su_nueva_contrase_a"
        android:inputType="textPassword" />

    <!-- Botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/volver" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/confirmar" />

    </LinearLayout>

</LinearLayout>
