<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.HelpFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/help_fragment_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/help_topics"
            android:prompt="@string/select_help_topic" />

        <EditText
            android:id="@+id/help_fragment_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/subject_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/help_fragment_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/message_hint"
            android:inputType="textMultiLine"
            android:minLines="4" />

        <Button
            android:id="@+id/help_fragment_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_button_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
